{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 202,
  "lineage": "0dd3710a-f6b1-518f-165c-e9a59961676f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9564fb01364286a",
            "domain": "vpc",
            "id": "eipalloc-0b9564fb01364286a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-240-153.compute-1.amazonaws.com",
            "public_ip": "34.234.240.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:internet-gateway/igw-04269c6a72a4f3e67",
            "id": "igw-04269c6a72a4f3e67",
            "owner_id": "669948573359",
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/webserver-alb/477beda1b7c53dcf",
            "arn_suffix": "app/webserver-alb/477beda1b7c53dcf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webserver-alb-2135618503.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/webserver-alb/477beda1b7c53dcf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00b252bdf1c765d4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bc8989bef943993d"
              },
              {
                "subnet_id": "subnet-0d28c7583c66ce342"
              }
            ],
            "subnets": [
              "subnet-0bc8989bef943993d",
              "subnet-0d28c7583c66ce342"
            ],
            "vpc_id": "vpc-00d9319771ed85c88",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:listener/app/webserver-alb/477beda1b7c53dcf/44c70859b0a0d146",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/webserver-target-group/d916ef8602a2334f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:listener/app/webserver-alb/477beda1b7c53dcf/44c70859b0a0d146",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/webserver-alb/477beda1b7c53dcf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb",
            "aws_security_group.allow_all",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/webserver-target-group/d916ef8602a2334f",
            "arn_suffix": "targetgroup/webserver-target-group/d916ef8602a2334f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/webserver-target-group/d916ef8602a2334f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webserver-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9564fb01364286a",
            "association_id": "eipassoc-0bff8db760a740f68",
            "connectivity_type": "public",
            "id": "nat-0cf31f1314cd31799",
            "network_interface_id": "eni-004bcb15005f35b30",
            "private_ip": "10.0.1.247",
            "public_ip": "34.234.240.153",
            "subnet_id": "subnet-0d28c7583c66ce342"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:route-table/rtb-0b4ac4f1812a51e13",
            "id": "rtb-0b4ac4f1812a51e13",
            "owner_id": "669948573359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf31f1314cd31799",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "tags_all": {
              "Name": "Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:route-table/rtb-0b46922e8bd3b02cf",
            "id": "rtb-0b46922e8bd3b02cf",
            "owner_id": "669948573359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04269c6a72a4f3e67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "tags_all": {
              "Name": "Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3afaf87a5d969ce",
            "route_table_id": "rtb-0b4ac4f1812a51e13",
            "subnet_id": "subnet-041e5106a04abd2ee"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023cc6563b580fe77",
            "route_table_id": "rtb-0b4ac4f1812a51e13",
            "subnet_id": "subnet-0b04689296db97f6a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052bf7547cf8225e9",
            "route_table_id": "rtb-0b46922e8bd3b02cf",
            "subnet_id": "subnet-0d28c7583c66ce342"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086684380ab26c038",
            "route_table_id": "rtb-0b46922e8bd3b02cf",
            "subnet_id": "subnet-0bc8989bef943993d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:security-group/sg-00b252bdf1c765d4c",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00b252bdf1c765d4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "669948573359",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:subnet/subnet-041e5106a04abd2ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e5106a04abd2ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669948573359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_1"
            },
            "tags_all": {
              "Name": "Private_Subnet_1"
            },
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:subnet/subnet-0b04689296db97f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b04689296db97f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669948573359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_2"
            },
            "tags_all": {
              "Name": "Private_Subnet_2"
            },
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:subnet/subnet-0d28c7583c66ce342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d28c7583c66ce342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669948573359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:subnet/subnet-0bc8989bef943993d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc8989bef943993d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669948573359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-00d9319771ed85c88"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:vpc/vpc-00d9319771ed85c88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4906f0e4d819860",
            "default_route_table_id": "rtb-03ab4a8ebb4dc50cd",
            "default_security_group_id": "sg-055c4c1e0ab21c907",
            "dhcp_options_id": "dopt-09bf42c7ef40294ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d9319771ed85c88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ab4a8ebb4dc50cd",
            "owner_id": "669948573359",
            "tags": {
              "Name": "Custom_VPC"
            },
            "tags_all": {
              "Name": "Custom_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}